--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,16 @@ nav ul{
 a{
 	text-decoration: none;
 		color: white;
+		font-size: 1.5rem;
+}
+#btn{
+	background: #5b7989;
+	color: #fff;
+	width: 200px;
+	height: 50px;
+    border-radius:  3rem;
+
+	margin-top: 40px;
 }
 .contenido{
 	width:97.75%;
